Finish rough first draft

--- a/main.bib
+++ b/main.bib
@@ -58,15 +58,103 @@
 }
 
 @article{homotopy-theoretic-aspects,
-author = {Lack, S.},
-journal = {Journal of Homotopy and Related Structures},
-keywords = {2-monads; Quillen model categories; 2-categories},
-language = {eng},
-number = {2},
-pages = {229-260},
-publisher = {Georgian Academy of Sciences, A. Razmadze Mathematical Institute, Tbilisi; Springer},
-title = {Homotopy-theoretic aspects of 2-monads.},
-url = {http://eudml.org/doc/232481},
-volume = {2},
-year = {2007},
+  author = {Lack, S.},
+  journal = {Journal of Homotopy and Related Structures},
+  keywords = {2-monads; Quillen model categories; 2-categories},
+  language = {eng},
+  number = {2},
+  pages = {229-260},
+  publisher = {Georgian Academy of Sciences, A. Razmadze Mathematical Institute, Tbilisi; Springer},
+  title = {Homotopy-theoretic aspects of 2-monads.},
+  url = {http://eudml.org/doc/232481},
+  volume = {2},
+  year = {2007},
+}
+
+@inproceedings{lcc-categories-and-type-theory,
+  title={Locally cartesian closed categories and type theory},
+  author={Seely, Robert AG},
+  booktitle={Mathematical proceedings of the Cambridge philosophical society},
+  volume={95},
+  number={1},
+  pages={33--48},
+  year={1984},
+  organization={Cambridge University Press}
+}
+
+@inproceedings{internal-type-theory,
+  title={Internal type theory},
+  author={Dybjer, Peter},
+  booktitle={International Workshop on Types for Proofs and Programs},
+  pages={120--134},
+  year={1995},
+  organization={Springer}
+}
+
+@article{substitution-up-to-isomorphism,
+  title={Substitution up to Isomorphism},
+  author={Curien, P-L},
+  journal={Diagrammes},
+  volume={23},
+  pages={43--66},
+  year={1990}
+}
+
+
+@inproceedings{on-the-interpretation-of-type-theory-in-lcc-categories,
+  title={On the interpretation of type theory in locally cartesian closed categories},
+  author={Hofmann, Martin},
+  booktitle={International Workshop on Computer Science Logic},
+  pages={427--441},
+  year={1994},
+  organization={Springer}
+}
+
+@article{the-local-universes-model,
+  title={The local universes model: an overlooked coherence construction for dependent type theories},
+  author={Lumsdaine, Peter LeFanu and Warren, Michael A},
+  journal={ACM Transactions on Computational Logic (TOCL)},
+  volume={16},
+  number={3},
+  pages={1--31},
+  year={2015},
+  publisher={ACM New York, NY, USA}
+}
+
+@inproceedings{the-biequivalence-of-lcc-categories-and-ml-type-theory,
+  title={The biequivalence of locally cartesian closed categories and Martin-L{\"o}f type theories},
+  author={Clairambault, Pierre and Dybjer, Peter},
+  booktitle={International Conference on Typed Lambda Calculi and Applications},
+  pages={91--106},
+  year={2011},
+  organization={Springer}
+}
+
+@article{internal-languages-of-finitely-complete-infty-categories,
+  title={Internal languages of finitely complete {$(\infty, 1)$}-categories},
+  author={Kapulkin, Krzysztof and Szumi{\l}o, Karol},
+  journal={Selecta Mathematica},
+  volume={25},
+  number={2},
+  pages={33},
+  year={2019},
+  publisher={Springer}
+}
+
+@article{takeuti-gandy-semi-simplicial,
+  title={A generalization of the Takeuti--Gandy interpretation},
+  author={Barras, Bruno and Coquand, Thierry and Huber, Simon},
+  journal={Mathematical structures in computer science},
+  volume={25},
+  number={5},
+  pages={1071--1099},
+  year={2015},
+  publisher={Cambridge University Press}
+}
+
+@article{towards-constructive-simplicial-model,
+  title={Towards a constructive simplicial model of Univalent Foundations},
+  author={Gambino, Nicola and Henry, Simon},
+  journal={arXiv preprint arXiv:1905.06281},
+  year={2019}
 }
