--- a/main.tex
+++ b/main.tex
@@ -30,7 +30,7 @@
 
 \begin{document}
 
-\title{A model of extensional type theory in a model category of locally cartesian closed categories}
+\title{A model of dependent type theory in the category of locally cartesian closed categories}
 
 \author{Martin E.\@ Bidlingmaier}
 
